--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -133,6 +133,11 @@
 		<servlet-name>cvaucher</servlet-name>
 		<url-pattern>*.pagoTarjeta</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>cvaucher</servlet-name>
+		<url-pattern>*.pagoEfectivo</url-pattern>
+	</servlet-mapping>
 	<!-- 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
