--- a/cvaucher.services/src/main/webapp/WEB-INF/cvaucher.properties
+++ b/cvaucher.services/src/main/webapp/WEB-INF/cvaucher.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://bb76fcb43f807b:6776566b@us-cdbr-aws-east-105.cleardb.net:3306/ad_033c9629217c759
+jdbc.url=jdbc:mysql://bb76fcb43f807b:6776566b@us-cdbr-aws-east-105.cleardb.net:3306/est_vaucher
 jdbc.username = bb76fcb43f807b
 jdbc.password = 6776566b
