--- a/cvaucherMVC/src/main/webapp/WEB-INF/cvaucher.properties
+++ b/cvaucherMVC/src/main/webapp/WEB-INF/cvaucher.properties
@@ -2,3 +2,4 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/est_vaucher
 jdbc.username = root
 jdbc.password =
+services.url = http://localhost:8092/cvaucher.services
