--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -138,6 +138,17 @@
 		<servlet-name>cvaucher</servlet-name>
 		<url-pattern>*.pagoEfectivo</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>cvaucher</servlet-name>
+		<url-pattern>*.domainUser</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>cvaucher</servlet-name>
+		<url-pattern>*.login</url-pattern>
+	</servlet-mapping>
+
 	<!-- 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
