--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -1,160 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
 		/WEB-INF/spring/root-context.xml 
 		
-		<!--  /WEB_INF/spring/security.xml-->
+		
 		</param-value>
-	</context-param>
-
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
-	<!-- Processes application requests -->
-	<servlet>
-		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	
-	<servlet>
-		<servlet-name>cvaucher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.agenda</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.direccion</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.historiaclinica</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.pacientes</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.seguimientopacientes</url-pattern>
-	</servlet-mapping>
-	
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.sesiones</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.sesionpagada</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.sesionrealizada</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.tipoagenda</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.tipotratamiento</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.tratamiento</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.tratamientopaciente</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.historialPagos</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.listaPrecios</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.auxPrecios</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.formasDePagos</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.cuentas</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.pagoTarjeta</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.pagoEfectivo</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.domainUser</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>cvaucher</servlet-name>
-		<url-pattern>*.login</url-pattern>
-	</servlet-mapping>
-
-	<!-- 
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>
-			org.springframework.web.filter.DelegatingFilterProxy
-		</filter-class>
-	</filter>
-	 -->
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>appServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet>
+    <servlet-name>cvaucher</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.agenda</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.direccion</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.historiaclinica</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.pacientes</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.seguimientopacientes</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.sesiones</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.sesionpagada</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.sesionrealizada</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.tipoagenda</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.tipotratamiento</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.tratamiento</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.tratamientopaciente</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.historialPagos</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.listaPrecios</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.auxPrecios</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.formasDePagos</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.cuentas</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.pagoTarjeta</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.pagoEfectivo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.domainUser</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.login</url-pattern>
+  </servlet-mapping>
 </web-app>
