--- a/cvaucher.services/.project
+++ b/cvaucher.services/.project
@@ -45,6 +45,11 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>net.harawata.mybatipse.MapperValidationBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.ajdt.ui.ajnature</nature>
@@ -58,5 +63,6 @@
 		<nature>org.jboss.tools.jst.web.kb.kbnature</nature>
 		<nature>org.jboss.tools.jsf.jsfnature</nature>
 		<nature>org.hibernate.eclipse.console.hibernateNature</nature>
+		<nature>net.harawata.mybatipse.MyBatisNature</nature>
 	</natures>
 </projectDescription>
