--- a/cvaucher.services/src/main/webapp/WEB-INF/properties/cvaucher.properties
+++ b/cvaucher.services/src/main/webapp/WEB-INF/properties/cvaucher.properties
@@ -10,3 +10,7 @@ jdbc2.password = 6111cc902751a56
 
 services.url = http://localhost:8092/cvaucher.services
 services2.url = http://cvaucher-services.cfapps.io
+
+mensage.texto = En java puedes utilizar un archivo de propiedades\
+ para almacenar información de configuración de la aplicación o cosas por el estilo. \
+ El formato de dicho archivo, con extensión .properties, es el siguiente
