--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -23,7 +23,8 @@
     	<commons.lang.version>2.5</commons.lang.version>
     	  	
 		<maven.compiler.plugin>2.3.2</maven.compiler.plugin>
-	</properties>
+		<org.springsecurity.version>3.1.3.RELEASE</org.springsecurity.version>
+ </properties>
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
@@ -98,6 +99,32 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${org.springsecurity.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${org.springsecurity.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springsecurity.version}</version>
+		</dependency>
+			
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 
 		<dependency>
