--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
 		/WEB-INF/spring/root-context.xml 
-		
+		/WEB-INF/spring/applicationContext-security.xml
 		
 		</param-value>
   </context-param>
