--- a/cvaucherMVC/pom.xml
+++ b/cvaucherMVC/pom.xml
@@ -16,7 +16,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<org.aspectj-version>1.6.9</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
 		<mysql.version>5.1.21</mysql.version>
-</properties>
+		<org.springsecurity.version>3.1.3.RELEASE</org.springsecurity.version>
+  </properties>
 
   <dependencies>
   	
@@ -64,32 +65,32 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${org.springframework-version}</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 			
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
 		
