--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -117,4 +117,15 @@
     <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.login</url-pattern>
   </servlet-mapping>
+  
+  	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+			<filter-class>
+				org.springframework.web.filter.DelegatingFilterProxy
+			</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
