--- a/cvaucherMVC/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucherMVC/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
+        	/WEB-INF/spring/cvaucherMVC-security.xml
 			/WEB-INF/spring/root-context.xml
-			/WEB-INF/spring/security.xml
-			/WEB-INF/spring/appServlet/servlet-context.xml
+			<!--  /WEB-INF/spring/appServlet/servlet-context.xml -->
 			/WEB-INF/spring/flow.xml
 		</param-value>
   </context-param>
