--- a/cvaucherMVC/pom.xml
+++ b/cvaucherMVC/pom.xml
@@ -93,6 +93,17 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-aspects</artifactId>
+			<version>${org.springsecurity.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-parent</artifactId>
+			<version>3.0.8.RELEASE</version>
+		</dependency>
 		
 			
 		<dependency>
@@ -115,7 +126,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<version>${org.aspectj-version}</version>
 		</dependency>	
 		
-			<!-- Hibernate -->
+		<dependency>
+  			<groupId>aspectj</groupId>
+  			<artifactId>aspectjweaver</artifactId>
+  			<version>1.5.2</version>
+  		</dependency>
+		
+			<!-- MyBatis -->
     	
     	
 		<!-- Persistence -->
