--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -105,6 +105,12 @@
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-remoting</artifactId>
+			<version>${org.springsecurity.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 			<version>${org.springsecurity.version}</version>
 		</dependency>
