--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -65,7 +65,11 @@
             <version>4.1.0.Beta1</version>
         </dependency>
         
-		
+		<dependency>
+			<groupId>org.acegisecurity</groupId>
+			<artifactId>acegi-security</artifactId>
+			<version>1.0.3</version>
+		</dependency>
 		
       
 		
