--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -147,6 +147,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>${mybatis.version}</version>
