--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,20 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
 		/WEB-INF/spring/root-context.xml 
-		/WEB-INF/spring/cvaucher-services-security.xml
+		<!-- /WEB-INF/spring/cvaucher-services-security.xml -->
 		
 		</param-value>
   </context-param>
+  <!--<filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>
+			org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+  </filter>
+    <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>-->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
@@ -117,15 +127,5 @@
     <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.login</url-pattern>
   </servlet-mapping>
-  
-  	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-			<filter-class>
-				org.springframework.web.filter.DelegatingFilterProxy
-			</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+
 </web-app>
