--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -3,12 +3,15 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
+    	
 		/WEB-INF/spring/root-context.xml 
 		<!-- /WEB-INF/spring/cvaucher-services-security.xml -->
+		<!-- /WEB-INF/spring/appServlet/servlet-context.xml -->
 		
 		</param-value>
   </context-param>
-  <!--<filter>
+   <!--
+  <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>
 			org.springframework.web.filter.DelegatingFilterProxy
@@ -17,7 +20,8 @@
     <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
-  </filter-mapping>-->
+  </filter-mapping>
+  -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
