--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,12 @@
     <param-value>
     	
 		/WEB-INF/spring/root-context.xml 
-		<!-- /WEB-INF/spring/cvaucher-services-security.xml -->
+		/WEB-INF/spring/cvaucher-services-security.xml
 		<!-- /WEB-INF/spring/appServlet/servlet-context.xml -->
 		
 		</param-value>
   </context-param>
-   <!--
+ 
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>
@@ -21,7 +21,7 @@
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  -->
+
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
