--- a/cvaucherMVC/pom.xml
+++ b/cvaucherMVC/pom.xml
@@ -143,7 +143,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   			<version>1.5.2</version>
   		</dependency>
 		
-			<!-- MyBatis -->
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
     	
     	
 		<!-- Persistence -->
