--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -127,6 +127,13 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>${org.springsecurity.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-acl</artifactId>
+			<version>3.1.3.RELEASE</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
