--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -131,9 +131,14 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-acl</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>${org.springsecurity.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
