--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
     	
 		/WEB-INF/spring/root-context.xml 
 		/WEB-INF/spring/cvaucher-services-security.xml
+		/WEB-INF/spring/cvaucher-services-security-acl.xml
 		<!-- /WEB-INF/spring/appServlet/servlet-context.xml -->
 		
 		</param-value>
