--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -136,5 +136,13 @@
     <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.roles</url-pattern>
   </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.caja</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.caja</url-pattern>
+  </servlet-mapping>
 
 </web-app>
