--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -118,6 +118,10 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.grupoCuentas</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.pagoTarjeta</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
