--- a/cvaucherMVC/src/main/webapp/WEB-INF/cvaucher.properties
+++ b/cvaucherMVC/src/main/webapp/WEB-INF/cvaucher.properties
@@ -1,8 +1,10 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/est_vaucher
 jdbc.username = root
-jdbc.password =polux
-
+--linux
+--jdbc.password =polux
+--windows
+jdbc.password =
 jdbc2.driverClassName=com.mysql.jdbc.Driver
 jdbc2.url=jdbc:mysql://b52a3b6be126bd:6111cc902751a56@us-cdbr-iron-east-02.cleardb.net:3306/ad_f0eb63e51c99fcb
 jdbc2.username = b52a3b6be126bd
