--- a/cvaucher.services/pom.xml
+++ b/cvaucher.services/pom.xml
@@ -96,6 +96,11 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		
 		<!-- Spring Security -->
 		<dependency>
