--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -159,5 +159,10 @@
     <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.impuesto</url-pattern>
   </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.jornadaLaboral</url-pattern>
+  </servlet-mapping>
 
 </web-app>
