--- a/cvaucher.services/src/main/webapp/WEB-INF/web.xml
+++ b/cvaucher.services/src/main/webapp/WEB-INF/web.xml
@@ -164,5 +164,10 @@
     <servlet-name>cvaucher</servlet-name>
     <url-pattern>*.jornadaLaboral</url-pattern>
   </servlet-mapping>
+  
+   <servlet-mapping>
+    <servlet-name>cvaucher</servlet-name>
+    <url-pattern>*.horarioLaboral</url-pattern>
+  </servlet-mapping>
 
 </web-app>
